# Learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  README.md  cmakeold2.txt  dsada.json  imgui.ini  results.json  run_main.bat
Mir/: CMakelists.txt  Mir.h
Mir/include/: RenderWindow.hpp  application.h  core.h  entryPoint.h  log.h
Mir/src/: Mir.h  application.cpp  log.cpp  main.cpp  main2.cpp  mirpch.cpp  mirpch.h
Mir/src/Mir/: Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  Window.h  application.cpp  application.h  core.h  entryPoint.h  log.cpp  log.h
Mir/src/Mir/CPython/: PythonTool.cpp  PythonTool.h  excelTools.py
Mir/src/Mir/Core/: Timestep.h
Mir/src/Mir/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Mir/src/Mir/ImGui/: Highlighter.cpp  Highlighter.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiTableWidget.cpp  ImGuiTableWidget.h  ImguiWidgets.cpp  ImguiWidgets.h  TokenizerTestData.typ  WindowsFilebrowser.cpp  WindowsFilebrowser.h  exampleTablethingy  exampleiom.iom  imfilebrowser.h  playground.cpp  playground.h  styles.h  test.csv  test222.cpp  testsedsa.cpp  varConfigHelper.cpp  varConfigHelper.h
Mir/src/Mir/Opcua/: OpcuaClient.cpp  OpcuaClient.h  txt.txt
Mir/src/Mir/Platform/: WindowsWindow.cpp  WindowsWindow.h
Mir/src/Mir/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Mir/src/Mir/TypeUtils/: Serializers.cpp  Serializers.h  Sorting.cpp  Sorting.h
Mir/src/Mir/Types/: MirTypes.h
Mir/src/Mir/Utils/: Utils.cpp  Utils.h
Mir/src/Mir/b&rParser/: BaseWidgets.cpp  BaseWidgets.h  Factory.cpp  Mapper.cpp  Mapper.h  MirParser.cpp  MirParser.h  MirTypes.h  Tokenizer.cpp  Tokenizer.h  UndoRedoSystem.h  brTypes.h  brXmlParser.h  classTypes.cpp  classTypes.h  csvMapping copy 2.json  csvMapping copy.json  csvMapping.json  parser.cpp  parser.h
Mir/src/Mir/b&rParser/testing/: CardInfo.h  SimpleEventSystem.cpp  TokenizerTestData.typ  brTypClass.cpp  readXmlTest.cpp  test22.cpp  testhw.xml  tokenizer.cpp
Mir/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
Mir/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlVertexArray.cpp  OpenGlVertexArray.h
Mir/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Mir/tests/: CMakelists.txt
Mir/tests/Utils/: CMakelists.txt  FileUtilsTest.cpp
Tools/: excelTools.py  output.csv  test.typ  test1.py
include/: Application.hpp  Example.hpp  Node.hpp  Profiler.hpp  ResourceManager.hpp  WindowManager.hpp
opcuaApplication/: CMakelists.txt
opcuaApplication/src/: opcUAapp.cpp  opcUaHelper.cpp
sandbox/: CMakelists.txt  CMakelists2.txt
sandbox/src/: sandboxApp.cpp
src/: Application.cpp  Example.cpp  Node.cpp  RenderWindow.cpp  ResourceManager.cpp  WindowManager.cpp  main.cpp  main2.cpp
tests/: ApplicationTest.cpp  CMakeLists.txt  ExampleTests.cpp  ExampleTests1.cpp
tests/benchmarks/: BenchmarkTests.cpp
